--- a/DP-2/makefile
+++ b/DP-2/makefile
@@ -1,1 +1,15 @@
-#make file for Data Producer 2
+CC = gcc
+CFLAGS = -I./inc -c -Wall
+LDFLAGS = -lrt -lpthread
+
+all: DP-2
+
+DP-2: obj/dp2.o
+	$(CC) -o bin/DP-2 obj/dp-2.o $(LDFLAGS)
+
+obj/dp2.o: src/dp2.cpp
+	$(CC) $(CFLAGS) src/dp2.cpp -o obj/dp2.o
+
+clean:
+	rm -rf ./bin/DP-2 ./obj/*.o
+
