--- a/DP-2/makefile
+++ b/DP-2/makefile
@@ -5,10 +5,10 @@ LDFLAGS = -lrt -lpthread
 all: DP-2
 
 DP-2: obj/dp2.o
-	$(CC) -o bin/DP-2 obj/dp-2.o $(LDFLAGS)
+	$(CC) -o bin/DP-2 obj/dp2.o $(LDFLAGS)
 
 obj/dp2.o: src/dp2.cpp
-	$(CC) $(CFLAGS) src/dp2.cpp -o obj/dp2.o
+	$(CC) -C $(CFLAGS) src/dp2.cpp -o obj/dp2.o
 
 clean:
 	rm -rf ./bin/DP-2 ./obj/*.o
